chore(quick-260420-se6): fix JetBrains file problems project-wide
Scanned modified Java files on branch via JetBrains MCP get_file_problems
and applied triaged fixes. Verified :ai-agent:ai-agent:test green.

Fixes:
- diamond operator on TypeReference<>
- @NonNull on overrides in @NonNullApi packages (AuditAdvisor,
  ToolCallbackAuditDecorator, ProjectingChatMemoryRepository,
  MdcPropagatingTaskDecorator, AiKnowledgeDocumentStatus/MessageRole/
  ToolCallOutcome.getId)
- javadoc {@link} -> {@code} for private method in DefaultChatServiceImpl
- List.getLast() replacing list.get(size-1)
- Objects::nonNull reference over lambda
- negated XOR boolean simplification in StructuredFilterConditionMapper

Intentional skips documented in SUMMARY.md: defensive contract guards,
@Tool reflection surfaces, stylistic if->switch rewrites.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>